--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -19,70 +19,52 @@
           onchange={{action (mut activity.comment) value='target.value'}}
         >
       </div>
-      <table class="table table--striped table--activity-blocks">
+      <div class="form-group checkboxes">
+        {{sy-checkbox
+          data-test-activity-review
+          checked=activity.review
+          on-change=(action (mut activity.review))
+          label='Needs review'
+        }}
+        {{sy-checkbox
+          data-test-activity-not-billable
+          checked=activity.notBillable
+          on-change=(action (mut activity.notBillable))
+          label='Not billable'
+        }}
+      </div>
+      <table class="table table--striped table--activity-edit">
         <tbody>
-          {{#each (reject-by 'isDeleted' true blocks) as |block|}}
-            <tr
-              data-test-activity-block-row
-              data-test-activity-block-row-id={{block.model.id}}
-            >
-              <td>
-                <button
-                  data-test-delete-activity-block
-                  class="btn btn-default"
-                  type="button"
-                  {{action 'deleteBlock' block}}
-                >
-                  {{fa-icon 'trash'}}
-                </button>
-              </td>
-              <td class="form-group {{if block.changeset.error.from 'has-error'}}">
-                {{sy-timepicker
-                  value        = block.changeset.from
-                  max          = block.changeset.to
-                  precision    = 1
-                  on-focus-out = (action 'validateChangeset' block.changeset)
-                  on-change    = (action (mut block.changeset.from))
-                }}
-              </td>
-              <td>-</td>
-              <td class="form-group {{if block.changeset.error.to 'has-error'}}">
-                {{sy-timepicker
-                  value        = block.changeset.to
-                  min          = block.changeset.from
-                  precision    = 1
-                  on-focus-out = (action 'validateChangeset' block.changeset)
-                  on-change    = (action (mut block.changeset.to))
-                }}
-              </td>
-              <td>
-                {{#if (and block.changeset.from block.changeset.to)}}
-                  {{format-duration (moment-diff block.changeset.from block.changeset.to) false}}
-                {{/if}}
-              </td>
-            </tr>
-          {{/each}}
-          <tr>
-            <td>
-              <button
-                data-test-add-activity-block
-                class="btn btn-default"
-                type="button"
-                {{action 'addBlock'}}
-              >
-                {{fa-icon 'plus'}}
-              </button>
+          <tr
+            data-test-activity-block-row
+            data-test-activity-block-row-id={{activity.id}}
+          >
+            <td class="form-group {{if activity.error.fromTime 'has-error'}}">
+              {{sy-timepicker
+                value        = activity.fromTime
+                max          = activity.toTime
+                precision    = 1
+                on-focus-out = (action 'validateChangeset' activity)
+                on-change    = (action (mut activity.fromTime))
+              }}
             </td>
-            <td><strong><u>Total:</u></strong></td>
-            <td></td>
-            <td></td>
-            <td><strong><u>{{format-duration total false}}</u></strong></td>
+            <td>-</td>
+            <td class="form-group {{if activity.error.toTime 'has-error'}}">
+              {{sy-timepicker
+                value        = activity.toTime
+                min          = activity.fromTime
+                precision    = 1
+                disabled     = (if activity.active true)
+                on-focus-out = (action 'validateChangeset' activity)
+                on-change    = (action (mut activity.toTime))
+              }}
+            </td>
           </tr>
         </tbody>
       </table>
     </div>
     <div class="card-footer text-right">
-      <button class="btn btn-danger" type="button" disabled={{model.active}} {{action 'delete'}}>Delete</button>
+      <button class="btn btn-danger" type="button" disabled={{model.active}} {{action 'delete' activity}}>Delete</button>
       <button class="btn btn-primary" type="submit" disabled={{not saveEnabled}}>Save</button>
     </div>
   </div>
