--- a/app/styles/activities.scss
+++ b/app/styles/activities.scss
@@ -20,14 +20,29 @@
   flex-basis: 0%;
 }
 
-.table--activity-blocks > tbody > tr > td {
+.table--activity-edit > tbody > tr > td {
   vertical-align: middle;
+  text-align: center;
 
-  &:nth-child(1) { width: 70px; }
-  &:nth-child(2) { width: 80px; }
-  &:nth-child(3) { width: 25px; }
-  &:nth-child(4) { width: 80px; }
-  &:nth-child(5) { text-align: right; }
+  &:nth-child(1) {
+    width: 80px;
+  }
+  &:nth-child(2) {
+    width: 25px;
+  }
+  &:nth-child(3) {
+    width: 80px;
+  }
+}
+
+.transferred {
+  cursor: not-allowed;
+  color: #a29b96;
+}
+
+.checkboxes {
+  display: flex;
+  justify-content: space-around;
 }
 
 @media (--lg-viewport) {
