--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -4,7 +4,7 @@
       {{#link-to 'index.activities'}}{{fa-icon 'chevron-left'}}{{/link-to}}
     </div>
     <div class="card-block">
-      {{#task-selection task=activity.task as |t|}}
+      {{#task-selection task=changeset.task as |t|}}
         <div class="form-group">{{t.customer}}</div>
         <div class="form-group">{{t.project}}</div>
         <div class="form-group">{{t.task}}</div>
@@ -15,68 +15,49 @@
           class="form-control"
           placeholder="Comment"
           name="comment"
-          value={{activity.comment}}
-          onchange={{action (mut activity.comment) value='target.value'}}
+          value={{changeset.comment}}
+          onchange={{action (mut changeset.comment) value='target.value'}}
         >
       </div>
-      <table class="table table--striped table--activity-blocks">
+      <div class="form-group checkboxes">
+        {{sy-checkbox
+          data-test-activity-review
+          checked=changeset.review
+          on-change=(action (mut changeset.review))
+          label='Needs review'
+        }}
+        {{sy-checkbox
+          data-test-activity-not-billable
+          checked=changeset.notBillable
+          on-change=(action (mut changeset.notBillable))
+          label='Not billable'
+        }}
+      </div>
+      <table class="table table--striped table--activity-edit">
         <tbody>
-          {{#each (reject-by 'isDeleted' true blocks) as |block|}}
-            <tr
-              data-test-activity-block-row
-              data-test-activity-block-row-id={{block.model.id}}
-            >
-              <td>
-                <button
-                  data-test-delete-activity-block
-                  class="btn btn-default"
-                  type="button"
-                  {{action 'deleteBlock' block}}
-                >
-                  {{fa-icon 'trash'}}
-                </button>
-              </td>
-              <td class="form-group {{if block.changeset.error.from 'has-error'}}">
-                {{sy-timepicker
-                  value        = block.changeset.from
-                  max          = block.changeset.to
-                  precision    = 1
-                  on-focus-out = (action 'validateChangeset' block.changeset)
-                  on-change    = (action (mut block.changeset.from))
-                }}
-              </td>
-              <td>-</td>
-              <td class="form-group {{if block.changeset.error.to 'has-error'}}">
-                {{sy-timepicker
-                  value        = block.changeset.to
-                  min          = block.changeset.from
-                  precision    = 1
-                  on-focus-out = (action 'validateChangeset' block.changeset)
-                  on-change    = (action (mut block.changeset.to))
-                }}
-              </td>
-              <td>
-                {{#if (and block.changeset.from block.changeset.to)}}
-                  {{format-duration (moment-diff block.changeset.from block.changeset.to) false}}
-                {{/if}}
-              </td>
-            </tr>
-          {{/each}}
-          <tr>
-            <td>
-              <button
-                data-test-add-activity-block
-                class="btn btn-default"
-                type="button"
-                {{action 'addBlock'}}
-              >
-                {{fa-icon 'plus'}}
-              </button>
+          <tr
+            data-test-activity-block-row
+          >
+            <td class="form-group {{if changeset.error.from 'has-error'}}">
+              {{sy-timepicker
+                value        = changeset.from
+                max          = changeset.to
+                precision    = 1
+                on-focus-out = (action 'validateChangeset' changeset)
+                on-change    = (action (mut changeset.from))
+              }}
             </td>
-            <td><strong><u>Total:</u></strong></td>
-            <td></td>
-            <td></td>
-            <td><strong><u>{{format-duration total false}}</u></strong></td>
+            <td>-</td>
+            <td class="form-group {{if changeset.error.to 'has-error'}}">
+              {{sy-timepicker
+                value        = changeset.to
+                min          = changeset.from
+                precision    = 1
+                disabled     = (if changeset.active true)
+                on-focus-out = (action 'validateChangeset' changeset)
+                on-change    = (action (mut changeset.to))
+              }}
+            </td>
           </tr>
         </tbody>
       </table>
