--- a/app/components/record-button/template.hbs
+++ b/app/components/record-button/template.hbs
@@ -2,7 +2,7 @@
   {{#if active}}
     <button data-test-record-stop type="submit" class="record-button record-button--stop" {{action 'stop'}}></button>
     <div class="record-button-timer">
-      {{duration-since activity.fromTime}}
+      {{duration-since activity.from}}
     </div>
   {{else}}
     <button data-test-record-start type="submit" class="record-button record-button--start" {{action 'start'}}></button>
