--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -4,7 +4,7 @@
       {{#link-to 'index.activities'}}{{fa-icon 'chevron-left'}}{{/link-to}}
     </div>
     <div class="card-block">
-      {{#task-selection task=activity.task as |t|}}
+      {{#task-selection task=changeset.task as |t|}}
         <div class="form-group">{{t.customer}}</div>
         <div class="form-group">{{t.project}}</div>
         <div class="form-group">{{t.task}}</div>
@@ -15,21 +15,21 @@
           class="form-control"
           placeholder="Comment"
           name="comment"
-          value={{activity.comment}}
-          onchange={{action (mut activity.comment) value='target.value'}}
+          value={{changeset.comment}}
+          onchange={{action (mut changeset.comment) value='target.value'}}
         >
       </div>
       <div class="form-group checkboxes">
         {{sy-checkbox
           data-test-activity-review
-          checked=activity.review
-          on-change=(action (mut activity.review))
+          checked=changeset.review
+          on-change=(action (mut changeset.review))
           label='Needs review'
         }}
         {{sy-checkbox
           data-test-activity-not-billable
-          checked=activity.notBillable
-          on-change=(action (mut activity.notBillable))
+          checked=changeset.notBillable
+          on-change=(action (mut changeset.notBillable))
           label='Not billable'
         }}
       </div>
@@ -37,26 +37,25 @@
         <tbody>
           <tr
             data-test-activity-block-row
-            data-test-activity-block-row-id={{activity.id}}
           >
-            <td class="form-group {{if activity.error.fromTime 'has-error'}}">
+            <td class="form-group {{if changeset.error.from 'has-error'}}">
               {{sy-timepicker
-                value        = activity.fromTime
-                max          = activity.toTime
+                value        = changeset.from
+                max          = changeset.to
                 precision    = 1
-                on-focus-out = (action 'validateChangeset' activity)
-                on-change    = (action (mut activity.fromTime))
+                on-focus-out = (action 'validateChangeset' changeset)
+                on-change    = (action (mut changeset.from))
               }}
             </td>
             <td>-</td>
-            <td class="form-group {{if activity.error.toTime 'has-error'}}">
+            <td class="form-group {{if changeset.error.to 'has-error'}}">
               {{sy-timepicker
-                value        = activity.toTime
-                min          = activity.fromTime
+                value        = changeset.to
+                min          = changeset.from
                 precision    = 1
-                disabled     = (if activity.active true)
-                on-focus-out = (action 'validateChangeset' activity)
-                on-change    = (action (mut activity.toTime))
+                disabled     = (if changeset.active true)
+                on-focus-out = (action 'validateChangeset' changeset)
+                on-change    = (action (mut changeset.to))
               }}
             </td>
           </tr>
@@ -64,7 +63,7 @@
       </table>
     </div>
     <div class="card-footer text-right">
-      <button class="btn btn-danger" type="button" disabled={{model.active}} {{action 'delete' activity}}>Delete</button>
+      <button class="btn btn-danger" type="button" disabled={{model.active}} {{action 'delete'}}>Delete</button>
       <button class="btn btn-primary" type="submit" disabled={{not saveEnabled}}>Save</button>
     </div>
   </div>
