--- a/app/styles/activities.scss
+++ b/app/styles/activities.scss
@@ -32,7 +32,7 @@
 
 @media (--lg-viewport) {
   .activities-edit:not(:empty) + .activities-list {
-    flex-basis: auto;
+    flex-basis: 70%;
   }
 
   .activities-edit {
