--- a/app/components/date-buttons/template.hbs
+++ b/app/components/date-buttons/template.hbs
@@ -1,3 +1,3 @@
 {{#each choices as |choice index|}}
-  <button class="btn" {{action "selectDate" choice}} data-test-preset-date={{index}}>{{choice}}</button>
+  <button class="btn date-button" {{action "selectDate" choice}} data-test-preset-date={{index}}>{{choice}}</button>
 {{/each}}
