--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -36,6 +36,6 @@
     {{/power-calendar}}
   {{/modal.body}}
   {{#modal.footer}}
-    <button type="submit" class="btn btn-primary" {{action 'reschedule' rescheduleDate}}>Save</button>
+    <button type="submit" class="btn btn-primary" {{action 'reschedule' rescheduleDate}} data-test-reschedule>Save</button>
   {{/modal.footer}}
 {{/sy-modal}}
