--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -38,7 +38,7 @@
         {{#if absence}}
           <button
             type="button"
-            data-test-edit-absence
+            data-test-edit-absence-hidden
             class="btn btn-warning"
             {{action (toggle 'showEditModal' this)}}
           >
