--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -36,7 +36,7 @@
       <table class="table table--striped table--activity-edit">
         <tbody>
           <tr
-            data-test-activity-block-row
+            data-test-activity-time
           >
             <td class="form-group {{if changeset.error.from 'has-error'}}">
               {{sy-timepicker
