--- a/app/templates/task-option.hbs
+++ b/app/templates/task-option.hbs
@@ -3,7 +3,7 @@
   class="{{if option.archived 'inactive'}}"
   id="task-option-{{option.id}}"
 >
-  {{#if (and current (or media.isMd media.isLg media.isXl))}}
+  {{#if (and current (or (media 'isMd') (media 'isLg') (media 'isXl')))}}
     {{progress-tooltip target=(concat '#task-option-' option.id) visible=current model=option}}
   {{/if}}
   {{option.name}}
