--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -7,7 +7,7 @@
     {{#if activities}}
       <table class="table table--striped table--activities">
         <tbody>
-          {{#each sortedActivities as |activity|}}
+          {{#each mergedActivities as |activity|}}
           <tr
              title={{unless activity.transferred "Click to edit"}}
             data-test-activity-row
@@ -15,11 +15,15 @@
             class="{{if activity.transferred 'transferred' 'pointer'}} {{if activity.active 'primary'}}"
             {{action 'editActivity' activity}}
           >
-              <td>
-                {{moment-format activity.from 'HH:mm'}}
-                -
+              <td class="activity-time {{if activity.sameAsPrev 'activity-time-sameasprev'}} {{if activity.overflowsPrev 'activity-time-overflowsprev'}}">
+                <span class="activity-time-from">{{moment-format activity.from 'HH:mm'}}</span>
+
+                {{#unless activity.sameAsPrev}}{{#unless activity.sameAsNext}}&nbsp;-&nbsp;{{/unless}}{{/unless}}
+
                 {{#unless activity.active}}
-                  {{moment-format activity.to 'HH:mm'}}
+                  {{#unless activity.sameAsNext}}<span class="activity-time-to">{{moment-format activity.to 'HH:mm'}}</span>{{/unless}}
+                {{else}}
+                  ...
                 {{/unless}}
               </td>
               <td title='{{activity.task.project.customer.name}} > {{activity.task.project.name}} > {{activity.task.name}}'>
