Add additional filter options for reports
This will allow to filter reports by last week, last month and last
year in Analysis and Statistics.

--- a/app/analysis/index/template.hbs
+++ b/app/analysis/index/template.hbs
@@ -107,7 +107,10 @@
             on-change = (action (mut toDate))
           }}
         {{/fs.label}}
-        {{date-buttons presetDate=(action (mut fromDate))}}
+        {{date-buttons
+            onUpdateFromDate=(action (mut fromDate))
+            onUpdateToDate=(action (mut toDate))
+        }}
       {{/fs.group}}
       {{#fs.group label='State'}}
         {{#fs.label}}
