--- a/app/components/power-select/options/template.hbs
+++ b/app/components/power-select/options/template.hbs
@@ -7,7 +7,7 @@
 {{#vertical-collection options estimateHeight=30 bufferSize=5 as |opt index|}}
   <li class="ember-power-select-option"
     aria-selected="{{ember-power-select-is-selected opt select.selected}}"
-    aria-disabled={{ember-power-select-true-string-if-present opt.disabled}}
+    aria-disabled={{if opt.disabled 'true'}}
     aria-current="{{eq opt select.highlighted}}"
     data-option-index="{{groupIndex}}{{index}}"
     role="option">
