--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -26,15 +26,15 @@
     </div>
     <div class="grid-cell hidden-sm">
       <div class="btn-group btn-group--vertical">
-        {{#link-to 'index.activities' tagName='button' type='button' class='btn'}}
+        <LinkTo @route="index.activities" @tagName="button" @type="button" class="btn">
           Activities <span class="badge">{{humanize-duration activitySum true}}</span>
-        {{/link-to}}
-        {{#link-to 'index.attendances' tagName='button' type='button' class='btn'}}
+        </LinkTo>
+        <LinkTo @route="index.attendances" @tagName="button" @type="button" class="btn">
           Attendances <span class="badge">{{humanize-duration attendanceSum}}</span>
-        {{/link-to}}
-        {{#link-to 'index.reports' tagName='button' type='button' class='btn'}}
+        </LinkTo>
+        <LinkTo @route="index.reports" @tagName="button" @type="button" class="btn">
           Timesheet <span class="badge">{{humanize-duration reportSum}}</span>
-        {{/link-to}}
+        </LinkTo>
         {{#if absence}}
           <button
             type="button"
@@ -58,19 +58,19 @@
     <div class="grid-cell visible-sm">
       <ul class="nav-tabs">
         <li>
-          {{#link-to 'index.activities'}}
+          <LinkTo @route="index.activities">
             Activities <span class="badge">{{humanize-duration activitySum true}}</span>
-          {{/link-to}}
+          </LinkTo>
         </li>
         <li>
-          {{#link-to 'index.attendances'}}
+          <LinkTo @route="index.attendances">
             Attendances <span class="badge">{{humanize-duration attendanceSum}}</span>
-          {{/link-to}}
+          </LinkTo>
         </li>
         <li>
-          {{#link-to 'index.reports'}}
+          <LinkTo @route="index.reports">
             Timesheet <span class="badge">{{humanize-duration reportSum}}</span>
-          {{/link-to}}
+          </LinkTo>
         </li>
         <li class="nav-tab--buttons">
           {{#if absence}}
@@ -106,38 +106,31 @@
   {{#with (changeset absence AbsenceValidations) as |changeset|}}
     {{#sy-modal size='auto' visible=showEditModal on-close=(action 'rollback' changeset) as |modal|}}
       {{#validated-form data-test-edit-absence-form model=changeset on-submit=(route-action 'saveAbsence' changeset) as |f|}}
-        {{#modal.header}}
+        <modal.header>
           Edit absence
-        {{/modal.header}}
-        {{#modal.body}}
-          {{#f.input name='type' as |fi|}}
+        </modal.header>
+        <modal.body>
+          <f.input @name="type" as |fi|>
             <div class="btn-group btn-group--auto">
               {{#each absenceTypes as |at|}}
                 <button type="button" class="btn btn-default {{if (eq at.id changeset.type.id) 'active'}}" {{action fi.update at}}>{{at.name}}</button>
               {{/each}}
             </div>
-          {{/f.input}}
-          {{#f.input name='date' as |fi|}}
-            {{#power-calendar
-              class          = 'calendar'
-              selected       = changeset.date
-              center         = center
-              onCenterChange = (perform setCenter)
-              onSelect       = (action fi.update value='moment')
-              as |calendar|
-            }}
+          </f.input>
+          <f.input @name="date" as |fi|>
+            <PowerCalendar @class="calendar" @selected={{changeset.date}} @center={{center}} @onCenterChange={{perform setCenter}} @onSelect={{action fi.update value='moment'}} as |calendar|>
               <div class={{if calendar.loading 'loading-mask'}}>
                 {{calendar.nav}}
-                {{calendar.days disabledDates=disabledDatesForEdit startOfWeek=1}}
+                <calendar.days @disabledDates={{disabledDatesForEdit}} @startOfWeek={{1}} />
               </div>
-            {{/power-calendar}}
-          {{/f.input}}
-          {{f.input type='textarea' placeholder='Enter comment...' name='comment'}}
-        {{/modal.body}}
-        {{#modal.footer}}
+            </PowerCalendar>
+          </f.input>
+          <f.input @type="textarea" @placeholder="Enter comment..." @name="comment" />
+        </modal.body>
+        <modal.footer>
           <button type="button" class="btn btn-danger" {{action 'deleteAbsence' absence}}>Delete</button>
-          {{f.submit label='Save'}}
-        {{/modal.footer}}
+          <f.submit @label="Save" />
+        </modal.footer>
       {{/validated-form}}
     {{/sy-modal}}
   {{/with}}
@@ -146,37 +139,37 @@
 {{#with (changeset newAbsence MultipleAbsenceValidations) as |changeset|}}
   {{#sy-modal size='auto' visible=showAddModal on-close=(action 'rollback' changeset) as |modal|}}
     {{#validated-form data-test-add-absence-form model=changeset on-submit=(route-action 'addAbsence' changeset) as |f|}}
-      {{#modal.header}}
+      <modal.header>
         New absence
-      {{/modal.header}}
-      {{#modal.body}}
-        {{#f.input name='type' as |fi|}}
+      </modal.header>
+      <modal.body>
+        <f.input @name="type" as |fi|>
           <div class="btn-group btn-group--auto">
             {{#each absenceTypes as |at|}}
               <button type="button" class="btn btn-default {{if (eq at.id changeset.type.id) 'active'}}" {{action fi.update at}}>{{at.name}}</button>
             {{/each}}
           </div>
-        {{/f.input}}
-        {{#f.input name='dates' as |fi|}}
-          {{#power-calendar-multiple
-            class          = 'calendar'
-            selected       = changeset.dates
-            center         = center
-            onCenterChange = (perform setCenter)
-            onSelect       = (action fi.update value='moment')
-            as |calendar|
-          }}
+        </f.input>
+        <f.input @name="dates" as |fi|>
+          <PowerCalendarMultiple
+              @class="calendar"
+              @selected={{changeset.dates}}
+              @center={{center}}
+              @onCenterChange={{perform setCenter}}
+              @onSelect={{action fi.update value='moment'}}
+              as |calendar|
+          >
             <div class={{if calendar.loading 'loading-mask'}}>
               {{calendar.nav}}
-              {{calendar.days disabledDates=disabledDates startOfWeek=1}}
+              <calendar.days @disabledDates={{disabledDates}} @startOfWeek={{1}} />
             </div>
-          {{/power-calendar-multiple}}
-        {{/f.input}}
-        {{f.input type='textarea' placeholder='Enter comment...' name='comment'}}
-      {{/modal.body}}
-      {{#modal.footer}}
-        {{f.submit label='Save'}}
-      {{/modal.footer}}
+          </PowerCalendarMultiple>
+        </f.input>
+        <f.input @type="textarea" @placeholder="Enter comment..." @name="comment" />
+      </modal.body>
+      <modal.footer>
+        <f.submit @label="Save" />
+      </modal.footer>
     {{/validated-form}}
   {{/sy-modal}}
 {{/with}}
